--- a/package.json
+++ b/package.json
@@ -4,15 +4,27 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
-    "nx": "14.1.9",
     "@nrwl/cli": "14.1.9",
+    "@nrwl/jest": "14.1.9",
     "@nrwl/workspace": "14.1.9",
-    "typescript": "~4.6.2",
-    "prettier": "^2.5.1"
+    "@nxext/stencil": "^14.0.3",
+    "@stencil/core": "^2.15.2",
+    "@stencil/sass": "1.5.2",
+    "@types/jest": "27.4.1",
+    "@types/node": "16.11.7",
+    "jest": "27.5.1",
+    "nx": "14.1.9",
+    "prettier": "^2.5.1",
+    "puppeteer": "^13.7.0",
+    "ts-jest": "27.1.4",
+    "ts-node": "9.1.1",
+    "typescript": "~4.6.2"
   },
   "workspaces": [
     "packages/**"
-  ]
+  ],
+  "dependencies": {
+    "tslib": "^2.3.0"
+  }
 }
