--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,14 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@nx-angular-stencil-storybook/core-components": [
+        "dist/packages/core-components"
+      ],
+      "@nx-angular-stencil-storybook/core-components/loader": [
+        "dist/packages/core-components/loader"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
