--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "@nrwl/eslint-plugin-nx": "14.1.9",
     "@nrwl/jest": "14.1.9",
     "@nrwl/linter": "14.1.9",
+    "@nrwl/storybook": "14.1.9",
     "@nrwl/workspace": "14.1.9",
     "@nxext/stencil": "^14.0.3",
     "@stencil/angular-output-target": "^0.4.0",
     "@stencil/core": "^2.15.2",
     "@stencil/sass": "1.5.2",
+    "@storybook/addon-essentials": "~6.4.12",
+    "@storybook/core-server": "~6.4.12",
+    "@storybook/html": "~6.4.12",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
@@ -33,6 +37,7 @@
     "eslint": "~8.12.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "27.5.1",
     "jest-preset-angular": "11.1.1",
     "nx": "14.1.9",
